--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="profile">
       <img class="profile-pic" src="images/profile.png" alt="">
       <h2>Hello</h2>
-      <P class ="intro">I am an Noobies of Developer. I love learning this langauge and to be successful fullstack developer.</P>
+      <P class ="intro">I am an Programmer. I love learning to be professional developer.</P>
     </div>
     <hr>
     <div class="skills">
